avance en los layout signin, forget, welcomeHome

--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".logger.LoginActivity"
+    tools:context=".logger.ForgetPasswordActivity"
     android:background="@drawable/background_fondo"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintStart_toStartOf="parent"
@@ -29,7 +29,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                     <ImageView
-                        android:id="@+id/imageViewClickBackLogin"
+                        android:id="@+id/imageViewClickBackForget"
                         android:layout_marginTop="25dp"
                         android:layout_width="50dp"
                         android:layout_height="50dp"
@@ -46,16 +46,23 @@
                         app:lottie_autoPlay="true"
                         app:lottie_loop="true"/>
                 </RelativeLayout>
-
                 <TextView
-                    android:id="@+id/imgTitleLogin"
                     android:layout_marginTop="45dp"
                     android:layout_marginStart="16dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Iniciar sesión"
+                    android:text="Cambiar la contraseña"
                     android:textColor="@color/white"
                     android:textSize="34dp"/>
+                <TextView
+                    android:layout_marginTop="45dp"
+                    android:layout_marginStart="16dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Si el correo proporcionado coincide con una cuenta registrada, se enviará un código de verificación."
+                    android:textColor="@color/white"
+                    android:textSize="16dp"/>
+                    />
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -70,7 +77,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
                         <EditText
-                            android:id="@+id/ediTxtCorreo"
+                            android:id="@+id/ediTxtCorreoForget"
                             android:background="@drawable/round_back_low_nightmode10_20"
                             android:layout_width="match_parent"
                             android:layout_height="40dp"
@@ -84,85 +91,22 @@
                             android:textColorHint="#FFFFFF"/>
                     </RelativeLayout>
                     <RelativeLayout
-                        android:layout_marginTop="15dp"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
-                        <EditText
-                            android:background="@drawable/round_back_low_nightmode10_20"
-                            android:id="@+id/ediTxtPass"
-                            android:layout_width="match_parent"
-                            android:layout_height="40dp"
-                            android:hint="Contraseña"
-                            android:drawableLeft="@drawable/ic_candado_grey"
-                            android:paddingLeft="15dp"
-
-                            android:drawablePadding="15dp"
-                            android:inputType="textPassword"
-                            android:textColor="#FFFFFF"
-                            android:textColorHint="#FFFFFF"/>
-                    </RelativeLayout>
-                    <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
                         <Button
-                            android:onClick="toMain"
-                            android:id="@+id/log_in"
+                            android:onClick="recoveryPassword"
+                            android:id="@+id/btn_log_forget"
                             android:layout_marginTop="30dp"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="Iniciar Sección"
+                            android:text="Buscar"
+                            android:layout_marginBottom="10dp"
                             android:textColor="@color/white"
                             android:background="@drawable/button_colors_green"/>
                     </RelativeLayout>
-                    <RelativeLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
-                        <TextView
-                            android:id="@+id/olvide_mi_c"
-                            android:layout_marginTop="20dp"
-                            android:layout_marginBottom="10dp"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Olvidastes la contraseña?"
-                            android:textColor="#15781B"
-                            android:onClick="toRecoveryPass"
-                            android:layout_centerHorizontal="true"
-                            android:layout_alignParentRight="true"/>
-                    </RelativeLayout>
-                </LinearLayout>
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="20dp"
-                    android:orientation="vertical"
-                    android:padding="13dp">
-                    <androidx.constraintlayout.widget.ConstraintLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
-
-                        <ImageView
-                            android:id="@+id/signGoogle"
-                            android:layout_width="180dp"
-                            android:layout_height="60dp"
-                            android:onClick="signIn"
-                            app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent"
-                            app:srcCompat="@drawable/ic_botones_de_icono_g_y_fb" />
-                        <ImageView
-                            android:id="@+id/imageView5"
-                            android:layout_width="40dp"
-                            android:layout_height="40dp"
-                            app:layout_constraintBottom_toBottomOf="@+id/signGoogle"
-                            app:layout_constraintEnd_toEndOf="@+id/signGoogle"
-                            app:layout_constraintStart_toStartOf="@+id/signGoogle"
-                            app:layout_constraintTop_toTopOf="@+id/signGoogle"
-                            app:srcCompat="@drawable/ic_icono_de_google" />
-
-                    </androidx.constraintlayout.widget.ConstraintLayout>
                 </LinearLayout>
             </LinearLayout>
         </ScrollView>
     </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
