--- a/app/src/main/res/layout/activity_password_restar.xml
+++ b/app/src/main/res/layout/activity_password_restar.xml
@@ -4,8 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background_fondo"
-    tools:context=".logger.EmailVerficationActivity">
+    tools:context=".logger.PasswordRestarActivity"
+    android:background="@drawable/background_fondo">
+
     <Button
         android:id="@+id/view8"
         android:layout_width="match_parent"
@@ -13,34 +14,24 @@
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="28dp"
-        android:background="@drawable/button_colors_green"
-        android:onClick="toLogin"
         android:text="Ir a iniciar sesión"
         android:textStyle="bold"
+        android:textColor="@color/white"
+        android:background="@drawable/button_colors_green"
+        android:onClick="toLogin"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
-
-    <TextView
-        android:id="@+id/textView13"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Ir a iniciar sesión"
-        android:textColor="#FFFFFF"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="@+id/view8"
-        app:layout_constraintEnd_toEndOf="@+id/view8"
-        app:layout_constraintStart_toStartOf="@+id/view8"
-        app:layout_constraintTop_toTopOf="@+id/view8" />
 
     <TextView
         android:id="@+id/textView14"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="32dp"
-        android:text="¡Bienvenido!"
+        android:fontFamily="sans-serif"
+        android:text="¡Enlace enviado!"
         android:textAlignment="center"
-        android:textColor="@color/white"
+        android:textColor="#FFFFFF"
         android:textSize="34sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/textView17"
@@ -54,33 +45,36 @@
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="24dp"
-        android:text="Se ha enviado un mensaje de verificación de cuenta al correo:"
-        android:textColor="@color/white"
+        android:text="Se ha enviado un link de recuperación al correo:"
+        android:textAlignment="center"
+        android:textColor="#FFFFFF"
         android:textSize="16sp"
-        app:layout_constraintBottom_toTopOf="@+id/text34"
+        app:layout_constraintBottom_toTopOf="@+id/text345"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/textView18"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="40dp"
-        android:text="¡Por favor accede a tu correo y da click en el link de confirmación!"
-        android:textColor="@color/white"
+        android:text="¡Por favor accede a tu correo, da click en el link de recuperación y reestablece tu contraseña!"
+        android:textAlignment="center"
+        android:textColor="#FFFFFF"
         android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/view8"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/text34"
+        android:id="@+id/text345"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="24dp"
-        android:textColor="#000000"
+        android:textAlignment="center"
+        android:textColor="#FFFFFF"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/textView18"
@@ -88,20 +82,19 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/imageView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginStart="90dp"
         android:layout_marginTop="90dp"
         android:layout_marginEnd="90dp"
         android:layout_marginBottom="90dp"
-        android:padding="20dp"
         app:lottie_loop="true"
         app:lottie_autoPlay="true"
-        app:lottie_rawRes="@raw/animated_verification"
+        app:lottie_rawRes="@raw/animated_recovery_password"
         app:layout_constraintBottom_toTopOf="@+id/textView14"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:background="@drawable/round_back_white10_20"/>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
